--- a/FactoryPRO.PM.Core.Logging/FactoryPRO.PM.Core.Logging.csproj
+++ b/FactoryPRO.PM.Core.Logging/FactoryPRO.PM.Core.Logging.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
   </ItemGroup>
 
 
